# ink-queries

./: .gitignore  .gitmodules  Cargo.toml  README.md  rust-toolchain.toml
.github/actions/build-core/: action.yml
.github/actions/install_toolchain/: action.yml
.github/workflows/: build.yml
contracts/: Cargo.toml
contracts/src/: lib.rs
debug/: Cargo.toml
debug-cli/: Cargo.toml
debug-cli/src/: main.rs
debug/src/: main.rs
oracle/: Cargo.toml
oracle/src/: main.rs
oracle/src/client/: builder.rs  mod.rs
uml-diagram/: diagram.drawio
utils/: Cargo.toml
utils/src/: lib.rs
utils/src/substrate/: contract_call.rs  mod.rs  phala.rs
utils/src/substrate/contract/: builder.rs  error.rs  mod.rs  query.rs
utils/src/substrate/contract/ink/: mod.rs
utils/src/substrate/contract/ink/config/: Cargo.toml  config.toml  testcontract.contract
utils/src/substrate/contract/utils/: crate_metadata.rs  manifest.rs  mod.rs
utils/src/substrate/extrinsics/: call.rs  mod.rs
utils/src/substrate/metadata/: mod.rs
utils/src/substrate/runtime_api/: mod.rs
utils/src/substrate/transcoder/: account_id.rs  decode.rs  encode.rs  env_types.rs  mod.rs  transcoder.rs
utils/src/substrate/transcoder/scon/: mod.rs  parse.rs
