[workspace]
members = [
    "oracle",
    "contracts",
    "utils",
    "debug-cli",
]

resolver = "2"
metadata.dylint.libraries = [
    { git = "https://github.com/Phala-Network/dylint-rules.git", pattern = "rules/*" },
]

[profile.release]
panic = "abort"
opt-level = 3

# make sure dev builds with backtrace do
# not slow us down
[profile.dev.package.backtrace]
inherits = "release"

[profile.production]
inherits = "release"
lto = true
codegen-units = 1

[profile.testnet]
inherits = "release"
debug = 1 # debug symbols are useful for profilers
debug-assertions = true
overflow-checks = true


[patch.crates-io]
# TODO.kevin: Move back to crates.io once it released 1.0
derive_more = { version = "0.99.17", git = "https://github.com/JelteF/derive_more" }
