[workspace]
members = [
    "oracle",
    "contracts",
    "utils",
    "debug-cli",
]

exclude = [
    "phala-blockchain",
]

[profile.release]
panic = "abort"
opt-level = 3

# make sure dev builds with backtrace do
# not slow us down
[profile.dev.package.backtrace]
inherits = "release"

[profile.production]
inherits = "release"
lto = true
codegen-units = 1

[profile.testnet]
inherits = "release"
debug = 1 # debug-cli symbols are useful for profilers
debug-assertions = true
overflow-checks = true