[package]
name = "contracts"
version = "0.1.0"
authors = ["Menna <emanuele.cryptdev@gmail.com>"]
edition = "2018"

license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/0xMenna01/drng-protocol"
description = "Phala smart contracts"
keywords = ["blockchain", "smart-contracts", "ink", "wasm", "vdf"]
categories = ["no-std", "embedded"]
include = ["Cargo.toml", "src/**/*.rs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ink = { version = "4.1.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

rabe = "0.3.1"


[lib]
name = "contracts"
path = "src/lib.rs"
crate-type = [
    "rlib",
]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    # Brush dependency
]
