[package]
name = "oracle"
version = "0.1.0"
authors = ["Menna <emanuele.cryptdev@gmail.com>"]
edition = "2021"

license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/0xMenna01/drng-protocol"
description = "A full node client"
keywords = ["blockchain", "smart-contracts", "ink", "wasm", "random", "crypto", "vdf", "p2p"]
include = ["Cargo.toml", "src/**/*.rs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
utils = { version = "0.1.0", path = "../utils" }
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }