[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
url = { version = "2.3.1", features = ["serde"] }
scale = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"] }

# dependencies for extrinsics (deploying and calling a contract)
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
sp-core = "20.0.0"
sp-runtime = "23.0.0"
sp-weights = "19.0.0"
pallet-contracts-primitives = "23.0.0"
scale-info = "2.7.0"
subxt = "0.28.0"
hex = "0.4.3"
jsonrpsee = { version = "0.18.2", features = ["ws-client"] }
nom = "7.1.3"
escape8259 = "0.5.2"
nom-supreme = { version = "0.7.0", features = ["error"] }
itertools = "0.10.5"


impl-serde = "0.4.0"
semver = { version = "1.0.17", features = ["serde"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = "1.0.96"
indexmap = "1.9.3"
base58 = { version = "0.2.0" }
thiserror = "1.0.40"
primitive-types = { version = "0.12.1", default-features = false, features = ["codec", "scale-info", "serde"] }

toml = "0.7.4"
cargo_metadata = "0.15.4"
strum = { version = "0.24", features = ["derive"] }
blake2 = "0.10.6"
ink_metadata = "4.2.0"
ink_env = "4.2.0"

contract-build = { git = "https://github.com/paritytech/cargo-contract", version = "3.0.1" }
contract-metadata = { git = "https://github.com/paritytech/cargo-contract", version = "3.0.1" }
contract-transcode = { git = "https://github.com/paritytech/cargo-contract", version = "3.0.1" }


