[package]
name = "utils"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
tokio = { version = "1.28.2", features = ["full"] }
scale = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"] }
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
sp-core = "20.0.0"
hex = "0.4.3"
sp-runtime = "23.0.0"
pallet-contracts-primitives = "23.0.0"
sp-weights = "19.0.0"
scale-info = "2.7.0"
subxt = "0.28.0"
jsonrpsee = { version = "0.18.2", features = ["ws-client"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = "1.0.96"
toml = "0.7.4"

# cargo-contract dependencies
contract-build = { git = "https://github.com/paritytech/cargo-contract", version = "3.0.1" }
contract-metadata = { git = "https://github.com/paritytech/cargo-contract", version = "3.0.1" }
contract-transcode = { git = "https://github.com/paritytech/cargo-contract", version = "3.0.1" }


# phala dependencies
phala-types = { git = "https://github.com/Phala-Network/phala-blockchain", branch = "master" }
phala-crypto = { git = "https://github.com/Phala-Network/phala-blockchain", branch = "master" }
phactory-api = { git = "https://github.com/Phala-Network/phala-blockchain", branch = "master", features = ["pruntime-client"] }